# Meerkat-thread

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  profil.sh  run_test.sh
exemple/: 02-switch.c  11-join.c  12-join-main.c  21-create-many.c  22-create-many-recursive.c  23-create-many-once.c  31-switch-many.c  32-switch-many-join.c  51-fibonacci.c  main.c  main_2.c  tri_fusion.c
src/: allocator.c  allocator.h  global.h  htable.c  htable.h  list.c  list.h  meerkat.c  meerkat.h  mutex.c  mutex.h  ordonnanceur.c  ordonnanceur.h  runqueue.c  runqueue.h  thread.c  trash_stack.h
tst/: ctest.h  htable.c  list.c
